--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,16 +1,17 @@
-.container {
-    max-width: 36rem;
-    padding: 0 1rem;
-    margin: 3rem auto 6rem;
-  }
-  
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .backToHome {
-    margin: 3rem 0 0;
-  }
-  
+.homeHeader {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  align-items: center;
+  background-color: #323E42;
+  background-size: 100% 100%;
+  background-position: center;
+  height: 45vh;
+  width: 100%;
+  color: white;
+  box-shadow: inset 0 0 70px 20px #21292c; 
+}
+
+.backToHome {
+  margin: 3rem 0 0;
+}
