--- a/styles/custom.sass
+++ b/styles/custom.sass
@@ -11,6 +11,5 @@ $header-bg-color: $blackest
 $colors: ("clear": $transparent, "indigo-light": $indigo-light)
 $theme-colors: ("clear": $transparent)
 
+@import "../node_modules/bootstrap/scss/bootstrap"
 
-
-@import "~bootstrap/scss/bootstrap"
