--- a/components/layout.module.sass
+++ b/components/layout.module.sass
@@ -5,8 +5,10 @@
   align-content: center
   padding: 50px
   text-align: center
-  background-color: #20232a
-  background-size: 100% 100%
+  background-color: transparent
+  background-image: linear-gradient(to right, #1a2c54 , rgba(0,0,0, .75)), url('/images/luke-chesser-JKUTrJ4vK00-unsplash.jpg')
+  background-size: cover
+  background-repeat: no-repeat
   background-position: center
   height: 500px
   width: 100%
