--- a/styles/custom.sass
+++ b/styles/custom.sass
@@ -1,14 +1,17 @@
 
-$transparent: rgba(0, 0, 0, 0.0)
-$indigo-light: #7e35f4
-$blackest: #20232a
+$transparent: rgba(0, 0, 0, .40)
+$purple-light: #000
+$blue-bg: #1a2c54
 
+$btn-color: $purple-light
+$btn-hover: $purple-light
 
-$hover: $indigo-light
-$header-bg-color: $blackest 
+$navbar-dark-color: rgba(255,255,255, 1.0)
+$navbar-dark-hover-color:rgba(255,255,255, .75) 
 
+$link-hover-decoration: underline, dotted white 
 
-$colors: ("clear": $transparent, "indigo-light": $indigo-light)
+$colors: ("clear": $transparent)
 $theme-colors: ("clear": $transparent)
 
 @import "../node_modules/bootstrap/scss/bootstrap"
