--- a/components/layout.module.sass
+++ b/components/layout.module.sass
@@ -10,7 +10,7 @@
   background-size: cover
   background-repeat: no-repeat
   background-position: center
-  height: 500px
+  height: 100vh
   width: 100%
   color: white
 
