--- a/components/layout.module.sass
+++ b/components/layout.module.sass
@@ -14,9 +14,7 @@
   width: 100%
   color: white
 
-.backToHome
-  margin: 3rem 0 0
 
-@media (min-width: 768px) 
-  .homeHeader
-    height: 100vh
+.contentContainer
+  background-color: #0A1121
+  height: 75vh
