--- a/styles/custom.sass
+++ b/styles/custom.sass
@@ -2,6 +2,7 @@
 $transparent: rgba(0, 0, 0, .40)
 $purple-light: #000
 $blue-bg: #1a2c54
+$darkblue-bg: #0A1121
 
 $btn-color: $purple-light
 $btn-hover: $purple-light
