update: navbar on mobile and projects

--- a/styles/custom.sass
+++ b/styles/custom.sass
@@ -15,5 +15,7 @@ $link-hover-decoration: underline, dotted white
 $colors: ("clear": $transparent)
 $theme-colors: ("clear": $transparent)
 
+$grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1262px, xxl: 1400px)
+
 @import "../node_modules/bootstrap/scss/bootstrap"
 
