update: styling navbar

--- a/styles/custom.sass
+++ b/styles/custom.sass
@@ -12,6 +12,8 @@ $navbar-dark-hover-color:rgba(255,255,255, .75)
 
 $link-hover-decoration: underline, dotted white 
 
+$nav-tabs-border-radius: 0
+
 $colors: ("clear": $transparent)
 $theme-colors: ("clear": $transparent)
 
