--- a/styles/global.sass
+++ b/styles/global.sass
@@ -47,12 +47,9 @@ img
 
 .nav-link
   color: white
-  
-.nav-link:hover
-  text-decoration: underline dashed $white 
 
-.nav-link.active
-  text-decoration: underline solid $white
+.active
+  border-bottom: inset 2px $white
 
 .nav-tabs
   border: 0
