--- a/styles/global.sass
+++ b/styles/global.sass
@@ -48,7 +48,7 @@ img
 .nav-link
   color: white
 
-.active
+.main-nav .active
   border-bottom: inset 2px $white
 
 .nav-tabs
@@ -72,6 +72,17 @@ img
 .portfolioContainer
   background-color: $darkblue-bg
   height: 75vh
+
+.vh-100
+  height: 100vh
+
+.resume
+  display: block
+  height: 1200px
+  width: 75%
+  background-image: url("/images/resume-1.png")
+  background-size: cover
+  background-repeat: no-repeat
 
 @media (max-width: 1262px)
 
