about blurb in home, changed bg-color for other pages

--- a/components/layout.module.sass
+++ b/components/layout.module.sass
@@ -14,7 +14,12 @@
   width: 100%
   color: white
 
+.fixedContainer
+  position: fixed
+  top: 45px
+  width: 100%
+  overflow: auto
+  bottom: 0
 
-.contentContainer
-  background-color: #0A1121
-  height: 75vh
+
+
