--- a/styles/global.sass
+++ b/styles/global.sass
@@ -20,6 +20,8 @@ a
 img
   width: 250px
 
+.rounded-img
+  border-radius: 5px
 
 .navbar
   background-color: black
@@ -92,6 +94,12 @@ img
 .card-body
   background-color: $transparent
   color: white
+  
+.stand-out
+  border: 1px solid rgba(255,255,255,0.5)
+  box-shadow: 0px 0px 5px rgba(255,255,255,0.5) 
+  border-radius: 3px
+
 
 @media (max-width: 1262px)
 
