fixed styling issues of header and navbar

--- a/components/layout.module.sass
+++ b/components/layout.module.sass
@@ -3,16 +3,16 @@
   flex-direction: column
   align-items: center
   align-content: center
-  padding: 50px
+  padding: 150px
   text-align: center
   background-color: transparent
-  background-image: linear-gradient(to right, #1a2c54 , rgba(0,0,0, .75)), url('/images/luke-chesser-JKUTrJ4vK00-unsplash.jpg')
+  background-image: linear-gradient(to right, #0f4c75 , rgba(0,0,0, .75)), url('/images/luke-chesser-JKUTrJ4vK00-unsplash.jpg')
   background-size: cover
   background-repeat: no-repeat
   background-position: center
-  height: 100vh
   width: 100%
   color: white
+  box-shadow: 0px 5px 20px #121a1e
 
 .fixedContainer
   position: fixed
@@ -20,6 +20,4 @@
   width: 100%
   overflow: auto
   bottom: 0
-
-
 
