--- a/styles/global.sass
+++ b/styles/global.sass
@@ -77,7 +77,7 @@ img
 .resume
   display: block
   height: 1200px
-  width: 75%
+  width: 900px
   background-image: url("/images/resume-1.png")
   background-size: contain
   background-repeat: no-repeat
@@ -120,6 +120,8 @@ img
 
   .smaller-pipes
     display: none
+  .resume
+    width: 100%
 
     
   
