--- a/components/layout.module.sass
+++ b/components/layout.module.sass
@@ -6,7 +6,7 @@
   padding: 80px 150px 210px 150px
   text-align: center
   background-color: transparent
-  background-image: linear-gradient(to right, #0f4c75 , rgba(0,0,0, .75)), url('/images/luke-chesser-JKUTrJ4vK00-unsplash.jpg')
+  background-image: linear-gradient(135deg, rgba(88, 61, 114, .90), rgba(0,0,0, .75)), url('/images/luke-chesser-JKUTrJ4vK00-unsplash.jpg')
   background-size: cover
   background-repeat: no-repeat
   background-position: center
