--- a/styles/global.sass
+++ b/styles/global.sass
@@ -1,5 +1,12 @@
 @import "custom"
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap')
+
+@mixin btn-primary
+  box-shadow: 0px 0px 5px black
+  border-radius: 20px
+  color: white
+
+
 html, body
   padding: 0
   margin: 0
@@ -35,11 +42,8 @@ a
 img
   width: 250px
 
-@mixin btn-primary
-  border: solid 1px white
-  border-radius: 0
-  background-color: #3282b8
-  color: white
+p
+  margin-bottom: 12px
 
 .rounded-img
   border-radius: 5px
@@ -62,25 +66,34 @@ img
 .nav-link
   color: white
 
+.nav-link:hover
+  color:$navbar-dark-hover-color
+
 .nav-tabs
   border: 0
 
-  & .nav-item 
-    border: solid 1px $white
-  
   & .nav-link
     text-decoration: none
 
+.nav-tabs .nav-link
+  @include btn-primary
+  border: 1px solid white
+  transition: background-color 0.5s ease-out
+
 .nav-tabs .nav-link.active
-      @include btn-primary
+  @include btn-primary 
+  background-color: #583d72
 
 .btn-primary
   @include btn-primary
-
+  background-color: #583d72
 
 
 .btn-primary:hover
   color: rgba(255,255,255,.8)
+
+.btn-tab
+  width: 17ch
 
 .resume
   display: block
@@ -95,20 +108,38 @@ img
   background-color: transparent
   border: 0
 
+.card-height
+  height: 24ch
+
 .card-body
   background-color: $transparent
   color: white
+
+.card-img-top
+  height: 260px
+  object-fit: cover
   
+
 .stand-out
   border: 1px solid black
   box-shadow: 0px 0px 5px black
   border-radius: 3px
 
-.blue-text-color
-  color: #bbe1fa
+.purple-text-color
+  color: #583d72
 
 .smaller-pipes
   font-size: .9rem
+
+#tabBarConnectingLine
+  background: white
+  width: 17px
+  position: relative
+  height: 1px
+  top: calc(47px / 2)
+  
+
+  
 
 @media (min-width: 576px)
   .navbar
@@ -116,6 +147,8 @@ img
 
   .main-nav .active
     border-bottom: inset 2px $white
+
+  
 
 @media (max-width: 576px) 
   #collapsingNavbar3
