--- a/styles/global.sass
+++ b/styles/global.sass
@@ -77,7 +77,7 @@ p
 
 .nav-tabs .nav-link
   @include btn-primary
-  border: 1px solid white
+  border: 2px solid white
   transition: background-color 0.5s ease-out
 
 .nav-tabs .nav-link.active
@@ -93,7 +93,7 @@ p
   color: rgba(255,255,255,.8)
 
 .btn-tab
-  width: 17ch
+  width: 18ch
 
 .resume
   display: block
@@ -105,6 +105,7 @@ p
   filter: drop-shadow(0 0 0.75rem black)
 
 .card
+  
   background-color: transparent
   border: 0
 
@@ -135,11 +136,13 @@ p
   background: white
   width: 17px
   position: relative
-  height: 1px
+  height: 2px
   top: calc(47px / 2)
   
 
-  
+@media (max-width: 436px)
+  #tabBarConnectingLine
+    display: none
 
 @media (min-width: 576px)
   .navbar
@@ -161,8 +164,6 @@ p
 
   .smaller-pipes
     display: none
-  .resume
-    width: 100%
 
     
   
