--- a/styles/global.sass
+++ b/styles/global.sass
@@ -12,7 +12,7 @@ html, body
   margin: 0
   font-family: 'Inter', Helvetica, sans-serif
   line-height: 1.6
-  font-size: 18px
+  font-size: 16px
   background-color: #1b262c
 
 html, body, #__next, #wrapper
@@ -47,6 +47,7 @@ p
 
 .rounded-img
   border-radius: 5px
+  box-shadow: 0px 0px 5px black
 
 .navbar
   background-color: black
