yellow card titles and portfolio order changed

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -26,7 +26,6 @@ html, body, #__next, #wrapper
 header
   flex: none
 
-
 main
   overflow-y: auto 
   flex: auto
@@ -120,7 +119,9 @@ p
 .card-img-top
   height: 260px
   object-fit: cover
-  
+
+.card-title
+  color: #fff56c
 
 .stand-out
   border: 1px solid black
