card title style update

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -121,7 +121,7 @@ p
   object-fit: cover
 
 .card-title
-  color: #fff56c
+  color: #a3db3b
 
 .stand-out
   border: 1px solid black
@@ -139,7 +139,7 @@ p
   width: 17px
   position: relative
   height: 2px
-  top: calc(47px / 2)
+  top: calc(44px / 2)
   
 
 @media (max-width: 436px)
