--- a/styles/global.sass
+++ b/styles/global.sass
@@ -9,9 +9,19 @@
 .transition-fade 
   transition: 0.4s
   opacity: 1
+  animation: slideUp 0.8s linear forwards
+  
 
 html.is-animating .transition-fade 
   opacity: 0
+
+
+@keyframes slideUp 
+  0% 
+    transform: translate3d(-100%, 0, 0)
+  100% 
+    transform: translate3d(0, 0, 0)
+  
 
 
 html, body
